<resources>
    <string name="app_name">SimpleBoxingTimer</string>
    <string name="admobAppID">ca-app-pub-5657961827660648~9449682672</string>
    <string name="bannerAdmobUnitID">ca-app-pub-5657961827660648/3758372293</string>
    <string name="interstitialAdmobUnitID">ca-app-pub-5657961827660648/3432468034</string>
    <string name="bannerAdmobUnitID_TestAd">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitialAdmobUnitIDTestAd">ca-app-pub-3940256099942544/1033173712</string>
    <string name="mobileTestDeviceId">C340C54945DE79A1BC801918665E1C66</string>
    <string name="current_round">Round %d / %d</string>
    <string name="infinity_round">Round &#8734;</string>
    <string name="rounds">Rounds</string>
    <string name="warning">SET WARNING TIME</string>
    <string name="off">OFF</string>
    <string name="ten_second">10 SEC</string>
    <string name="thirty_sec">30 SEC</string>
    <string name="reset">RESET</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="rest">REST</string>
    <string name="round_time">Round Time</string>

    <integer-array name="arr_warning_time">
        <item>0</item>
        <item>10</item>
        <item>30</item>
    </integer-array>

    <string-array name="arr_rest_time">
        <item>0 sec</item>
        <item>15 sec</item>
        <item>30 sec</item>
        <item>60 sec</item>
        <item>90 sec</item>
        <item>120 sec</item>
        <item>150 sec</item>
        <item>180 sec</item>
    </string-array>

    <string-array name="arr_round_time">
        <item>1 min</item>
        <item>2 min</item>
        <item>3 min</item>
        <item>4 min</item>
        <item>5 min</item>
        <item>6 min</item>
        <item>7 min</item>
        <item>8 min</item>
        <item>9 min</item>
        <item>10 min</item>
        <item>11 min</item>
        <item>12 min</item>
        <item>13 min</item>
        <item>14 min</item>
        <item>15 min</item>
        <item>16 min</item>
        <item>17 min</item>
        <item>18 min</item>
        <item>19 min</item>
        <item>20 min</item>
        <item>21 min</item>
        <item>22 min</item>
        <item>23 min</item>
        <item>24 min</item>
        <item>25 min</item>
        <item>26 min</item>
        <item>27 min</item>
        <item>28 min</item>
        <item>29 min</item>
        <item>30 min</item>
        <item>31 min</item>
        <item>32 min</item>
        <item>33 min</item>
        <item>34 min</item>
        <item>35 min</item>
        <item>36 min</item>
        <item>37 min</item>
        <item>38 min</item>
        <item>39 min</item>
        <item>40 min</item>
        <item>41 min</item>
        <item>42 min</item>
        <item>43 min</item>
        <item>44 min</item>
        <item>45 min</item>
        <item>46 min</item>
        <item>47 min</item>
        <item>48 min</item>
        <item>49 min</item>
        <item>50 min</item>
        <item>51 min</item>
        <item>52 min</item>
        <item>53 min</item>
        <item>54 min</item>
        <item>55 min</item>
        <item>56 min</item>
        <item>57 min</item>
        <item>58 min</item>
        <item>59 min</item>
    </string-array>

    <string-array name="arr_rounds">
        <item>Round 1</item>
        <item>Round 2</item>
        <item>Round 3</item>
        <item>Round 4</item>
        <item>Round 5</item>
        <item>Round 6</item>
        <item>Round 7</item>
        <item>Round 8</item>
        <item>Round 9</item>
        <item>Round 10</item>
        <item>Round 11</item>
        <item>Round 12</item>
        <item>Round 13</item>
        <item>Round 14</item>
        <item>Round 15</item>
        <item>Round &#8734;</item>
    </string-array>

</resources>
