<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainViewModel"
            type="com.junemon.simpleboxingtimer.MainViewmodel" />

        <import type="android.view.View" />
        <import type="android.text.TextUtils"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:background="@drawable/bg_black"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@{@string/current_round(mainViewModel.roundCounter, mainViewModel.whichRoundValue)}"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:text="Round 1 / 2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:padding="16dp"
            app:handleBackgroundHelper="@{mainViewModel.isResting()}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/calculator"
                android:gravity="center"
                android:text="@{mainViewModel.clockTicking}"
                android:textSize="165sp"
                android:textStyle="bold"
                app:bindingTimerHelper="@{mainViewModel.isTimerRunning}"
                tools:text="10:00" />

            <LinearLayout
                android:layout_width="0dp"
                app:bindingLinearlayoutVisibiltyHelper="@{mainViewModel.isTimerRunning}"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/rest"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <NumberPicker
                    android:id="@+id/npRestTime"
                    app:bindingNumberPickerResetterHelper="@{mainViewModel.isTimerRunning}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                app:bindingLinearlayoutVisibiltyHelper="@{mainViewModel.isTimerRunning}"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/round_time"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <NumberPicker
                    android:id="@+id/npRoundTime"
                    app:bindingNumberPickerResetterHelper="@{mainViewModel.isTimerRunning}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                app:bindingLinearlayoutVisibiltyHelper="@{mainViewModel.isTimerRunning}"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rounds"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <NumberPicker
                    android:id="@+id/npWhichRound"
                    app:bindingNumberPickerResetterHelper="@{mainViewModel.isTimerRunning}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato"
                android:text="@string/warning"
                android:textColor="@android:color/white" />

            <RadioGroup
                app:bindingRadioGroupHelper="@{mainViewModel.isTimerRunning}"
                android:id="@+id/radioGroupRoot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    app:bindingRadioButtonHelper="@{mainViewModel.isTimerRunning}"
                    android:id="@+id/radioOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/off"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/radioTenSec"
                    app:bindingRadioButtonHelper="@{mainViewModel.isTimerRunning}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_second"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/radioThirtySec"
                    app:bindingRadioButtonHelper="@{mainViewModel.isTimerRunning}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thirty_sec"
                    android:textColor="@android:color/white" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/reset" />

        <Button
            android:id="@+id/btnStart"
            app:bindingButtonStartViewHelper="@{mainViewModel.isTimerRunning}"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start" />

        <Button
            android:id="@+id/btnStop"
            app:bindingButtonStopViewHelper="@{mainViewModel.isTimerRunning}"
            android:visibility="gone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stop" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/detailAdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/bannerAdmobUnitID" />

        <!--ads:adSize="BANNER"-->
        <!--ads:adUnitId="@string/admobID_banner_test">-->
    </LinearLayout>
</layout>
